# nu_plugin_template

./: Cargo.toml  README.md
