[package]
name = "nu_plugin_{{ plugin_name }}"
version = "0.0.2"
authors = ["x0f5c3 <x0f5c3@tutanota.com>"]
edition = "2021"
repository = "https://github.com/x0f5c3/nu_plugin_{{ plugin_name }}"
description = "a nushell plugin called {{ plugin_name }}"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.76.0"
nu-protocol = "0.76.0"

